Reverting no-winner logic and adding win bonus